card 69 - Fixing some affix issues

--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -20,10 +20,10 @@
 <h4><small>Your ODK Form:</small> {{mapping.odk_form.name}}</h4>
 
 <h4>Step 2: Load your Salesforce Objects by order of insertion</h4>
-<div class="row well sf-row" bs-affix data-offset-top="420">
+<div class="row well sf-row" bs-affix data-offset-top="450" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
   <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_row.html'"></div>
 </div>
 
-<div class='row'>
+<div class='row odk-row'>
   <div class='col-md-12' ng-include="'/ng_templates/mappings/odk_column.html'"></div>
 </div>
