--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -8,17 +8,22 @@
           <option value=""></option>
         </select>
       </div>
-      <!-- <div class='col-md-8'>
+      <div class='col-md-8'>
         <div class="form-group">
           <input ng-model="sfFilter.field_name" type='text' placeholder="Filter SF fields" class='form-control' />
         </div>
-      </div> -->
+      </div>
     </div>
     <br />
 
     <ul class="nav nav-tabs">
       <li ng-repeat="sfObject in mapping.salesforceObjects | orderBy:'order'" ng-style="{'background-color': sfObject.color}" class='sf-field'>
-        <a href="#{{sfObject.name}}_{{sfObject.order}}" data-toggle="tab">{{sfObject.name}} <sup>{{sfObject.order}} <span ng-show="sfObject.is_repeat">r</span></sup></a>
+        <a href="#{{sfObject.name}}_{{sfObject.order}}" data-toggle="tab" ng-click="setViewingSfObject(sfObject)">
+          {{sfObject.name}}
+          <sup>{{sfObject.order}}
+            <span ng-show="sfObject.is_repeat">r</span>
+          </sup>
+        </a>
       </li>
     </ul>
 
@@ -26,13 +31,18 @@
       <div ng-repeat="sfObject in mapping.salesforceObjects" class="tab-pane" id="{{sfObject.name}}_{{sfObject.order}}">
         <div class='row'>
           <div class='col-md-12'>
-            <input type="checkbox" ng-click="toggleRepeat(sfObject)" ng-checked="sfObject.is_repeat" /> Repeat Field <br />
+            <input type="checkbox" ng-click="toggleRepeat(sfObject)" ng-checked="sfObject.is_repeat" /> Repeat Field
+            <a href="#" class='btn btn-danger pull-right' ng-click="deleteSfObject(sfObject)">
+              Remove
+              <span class='glyphicon glyphicon-remove white'></span>
+            </a>
           </div>
         </div>
+        <hr />
 
         <div class='external-field-holder'>
           <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="sfObject.salesforceFields">
-            <li class='list-group-item sf-field' ng-repeat="sfField in sfObject.salesforceFields | filter:sfFilter" ng-style="{'background-color': sfField.color}">
+            <li class='list-group-item sf-field' ng-repeat="sfField in sfObject.salesforceFields" ng-style="{'background-color': sfField.color}">
               {{sfField.field_name}}
             </li>
           </ul>
