--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -14,7 +14,6 @@
         </div>
       </div>
     </div>
-    <br />
     <ul class="nav nav-tabs" ui-sortable="sfObjectSortableOptions" ng-model="mapping.salesforceObjects">
       <li ng-repeat="sfObject in mapping.salesforceObjects" ng-style="{'background-color': sfObject.color}" class='sf-field'>
         <a href="#{{sfObject.name}}_{{sfObject.order}}" data-toggle="tab" ng-click="setViewingSfObject(sfObject)">
@@ -59,7 +58,7 @@
   </div>
 </div>
 
-<table class='table'>
+<table class='table' style='margin-bottom: 0px;'>
   <thead>
     <tr>
       <th width="60%">ODK Field Name</th>
