--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -4,16 +4,18 @@
   </ul>
 </div>
 
+<div class='saved-notification' ng-show="saved">Saved</div>
+
 <h4>Fill out your mapping details</h4>
 
 <div class="form-group">
   <label for="mapping_name">Name</label>
-  <input type="text" ng-model="mapping.name" class='form-control' />
+  <input type="text" ng-model="mapping.name" class='form-control' ng-change="saveMapping()" />
 </div>
 
 <div class="checkbox">
   <label>
-    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active'> Active
+    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active' ng-change="saveMapping()"> Active
   </label>
 </div>
 
