Changed "ODK field" to "Source field", line 21-23

--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -18,9 +18,9 @@
   <table class='table'>
     <thead>
       <tr>
-        <th>ODK Field Name</th>
-        <th>ODK Field Type</th>
-        <th>Salesforce Field</th>
+        <th>Source Field Name</th>
+        <th>Source Field Type</th>
+        <th>Destination Field</th>
       </tr>
     </thead>
     <tbody>
