card 69 - Updating some dragging and filtering issues

--- a/public/ng_templates/mappings/new.html
+++ b/public/ng_templates/mappings/new.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class='col-md-4'>
-    <a href='#' ng-click="createMapping()" class='btn btn-success'>Create Mapping</a>
+    <a href='#' ng-click="createMapping()" class='btn btn-success' ng-disabled="isCreating">Create Mapping</a>
   </div>
 
 </div>
