card 69 - renaming columns

--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -56,9 +56,9 @@
 <table class='table' style='margin-bottom: 0px;'>
   <thead>
     <tr>
-      <th width="60%">ODK Field Name</th>
-      <th width="20%">ODK Field Type</th>
-      <th width="20%">Salesforce Field</th>
+      <th width="60%">Source Field Name</th>
+      <th width="20%">Source Field Type</th>
+      <th width="20%">Destination Field</th>
     </tr>
   </thead>
 </table>
