--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -21,7 +21,7 @@
 
 <h4><small>Your ODK Form:</small> {{mapping.odk_form.name}}</h4>
 
-<h4>Step 2: Load your Salesforce Objects by order of insertion</h4>
+<h4>Step 2: Load your Salesforce Objects in the order that they must be inserted...</h4>
 <div class="row well sf-row" bs-affix data-offset-top="225" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
   <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_row.html'"></div>
 </div>
