--- a/public/ng_templates/mappings/odk_column.html
+++ b/public/ng_templates/mappings/odk_column.html
@@ -2,7 +2,7 @@
   <tbody>
     <tr ng-repeat="salesforceObject in mapping.salesforceObjects | filter: {is_repeat: false}" ng-style="{'background-color': salesforceObject.color}" ng-controller="SalesforceRelationshipCtrl">
       <td>
-        New {{salesforceObject.name}}.id
+        New {{salesforceObject.name}}_{{salesforceObject.order}}.ID
       </td>
       <td>
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="salesforceObject.relationshipFields">
