--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -1,6 +1,6 @@
 <div ng-controller="SalesforceCtrl" class='panel panel-default'>
   <div class='panel-body'>
-    <h4>Salesforce Objects <small>Choose objects by order of insertion.  Mark lookup fields to pre-existing records and specify matching field</small></h4>
+    <h4>Salesforce Objects and Fields <small>Add objects in required order of insertion.  Specify matching field for relationships. </small></h4>
     <div class='row'>
       <div class='col-md-4'>
         <!-- <label for="salesforce_object_name">SalesForce Object</label> -->
@@ -25,7 +25,7 @@
         </tab-heading>
         <div class='row'>
           <div class='col-md-12'>
-            <input type="checkbox" ng-click="toggleRepeat(sfObject)" ng-checked="sfObject.is_repeat" /> Repeat Field
+            <input type="checkbox" ng-click="toggleRepeat(sfObject)" ng-checked="sfObject.is_repeat" /> Repeat Block Destination
             <a href="#" class='btn btn-danger pull-right' ng-click="deleteSfObject(sfObject)">
               Remove
               <span class='glyphicon glyphicon-remove white'></span>
