--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -6,10 +6,10 @@
 
 <div class='saved-notification' ng-show="saved">Saved</div>
 
-<h4>Fill out your mapping details</h4>
+<!-- <h4>Fill out your mapping details</h4> -->
 
 <div class="form-group">
-  <label for="mapping_name">Name</label>
+  <label for="mapping_name">Mapping Name</label>
   <input type="text" ng-model="mapping.name" class='form-control' ng-change="saveMapping()" />
 </div>
 
@@ -19,9 +19,9 @@
   </label>
 </div>
 
-<h4><small>Your ODK Form:</small> {{mapping.odk_form.name}}</h4>
+<h4><small>Your Source:</small> {{mapping.odk_form.name}}</h4>
 
-<h4>Step 2: Load your Salesforce Objects in the order that they must be inserted...</h4>
+<!-- <h4>Step 2: Load your Salesforce Objects in the order that they must be inserted...</h4> -->
 <div class="row well sf-row" bs-affix data-offset-top="225" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
   <div class='col-md-12' ng-include="'/ng_templates/mappings/sf_row.html'"></div>
 </div>
