--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -1,6 +1,6 @@
 <div ng-controller="SalesforceCtrl" class='panel panel-default'>
   <div class='panel-body'>
-    <h4>Destination Objects &amp Fields <small>Add objects in required order of insertion.  Specify matching field for relationships. </small></h4>
+    <h4>Destination Objects &amp; Fields <small>Add objects in required order of insertion.  Specify matching field for relationships. </small></h4>
     <div class='row'>
       <div class='col-md-4'>
         <!-- <label for="salesforce_object_name">SalesForce Object</label> -->
