changed to filter destination fields

--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -48,7 +48,7 @@
 <div class='row odk-filter-row'>
   <div class='col-md-8'>
     <div class="form-group">
-      <input ng-model="odkFilter.field_name" type='text' placeholder="Filter ODK fields" class='form-control' />
+      <input ng-model="odkFilter.field_name" type='text' placeholder="Filter Destination fields" class='form-control' />
     </div>
   </div>
 </div>
