added back h4, will fix spacing issues later

--- a/public/ng_templates/mappings/edit.html
+++ b/public/ng_templates/mappings/edit.html
@@ -6,7 +6,7 @@
 
 <div class='saved-notification' ng-show="saved">Saved</div>
 
-<h4></h4>
+<h4>Mapping Edit Page</h4>
 
 <div class="form-group">
   <label for="mapping_name">Mapping Name</label>
