--- a/public/ng_templates/mappings/sf_row.html
+++ b/public/ng_templates/mappings/sf_row.html
@@ -56,9 +56,10 @@
 <table class='table' style='margin-bottom: 0px;'>
   <thead>
     <tr>
+      <th width="5%">uuid</th>
       <th width="50%">Source Field Name</th>
       <th width="20%">Source Field Type</th>
-      <th width="30%">Destination Field</th>
+      <th width="25%">Destination Field</th>
     </tr>
   </thead>
 </table>
