--- a/public/the_bridge_templates/product_search/index.html
+++ b/public/the_bridge_templates/product_search/index.html
@@ -7,13 +7,18 @@
   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
     <!-- Filters -->
   </div>
-  <div class="product-list col-lg-10 col-md-10 col-sm-10 col-xs-10">
+  <div class="product-list col-lg-10 col-md-10 col-sm-10 col-xs-10" ontouchstart="this.classList.toggle('hover');">  <!-- move ontouchstart to js file -->
     <div ng-repeat="product in products | filter:filterProducts" class="product col-lg-3 col-md-3 col-sm-4 col-xs-6">
       <div class='logo'>
         <img ng-src="images/{{product.logo_path}}"/>
       </div>
-      <div class='description'>
-        {{product.description}}
+      <div class="info">
+        <div class='description'>
+          {{product.description}}
+        </div>
+        <div class='actions'>
+          Do stuff here.
+        </div>
       </div>
     </div>
   </div>
