--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -30,6 +30,11 @@
               Remove
               <span class='glyphicon glyphicon-remove white'></span>
             </a>
+
+            <a href='#' class='btn btn-warning pull-right' ng-click='refreshSfFields(sfObject)'>
+              Refresh Fields
+              <span class='glyphicon glyphicon-refresh white'></span>
+            </a>
           </div>
         </div>
         <hr />
