Issue 39 - Correcting a number of problems plus record type
* Fixing issues with creating a new mapping due to Angular
  upgrade
* Identifying RecordTypeId fields as a special case
* Importing RecordTypeId fields as a special kind of lookup

--- a/public/the_bridge_templates/mappings/new.html
+++ b/public/the_bridge_templates/mappings/new.html
@@ -18,11 +18,11 @@
 </div>
 
 <h4>Step 1: Choose your ODK Form</h4>
+{{something}}
 
 <div class='row'>
   <div class='col-md-4'>
     <div class="form-group">
-      <!-- <label for="mapping_odk_formid">Open Data Kit Form</label> -->
       <select ng-model="mapping.odkForm.name" ng-options="o as o for o in odkForms" class='form-control'></select>
     </div>
   </div>
