--- a/public/the_bridge_templates/product_search/index.html
+++ b/public/the_bridge_templates/product_search/index.html
@@ -1,24 +1,39 @@
 <div ng-controller="ProductSearchController as productSearch" class="row">
-  <div class="search-row row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <input type:"text" class="form-control" placeholder="search" ng-model="searchText">
-      </div>
-  </div>
   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-    <!-- Filters -->
+  <!-- Filters -->
   </div>
-  <div class="product-list col-lg-10 col-md-10 col-sm-10 col-xs-10" ontouchstart="this.classList.toggle('hover');">  <!-- move ontouchstart to js file -->
-    <div ng-repeat="product in products | filter:filterProducts" class="product col-lg-3 col-md-3 col-sm-4 col-xs-6">
-      <div class='logo'>
-        <img ng-src="images/{{product.logo_path}}"/>
+  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10"> 
+    <div class="search-container row">
+      <div class="search-box col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h3>open<strong>Marketplace</strong></h3>
+        <h4 class="sub-heading"><strong>Find the technology you need to grow your impact.</strong></h4>
+        <div class="search-field no-padding col-lg-8 col-md-8 col-sm-6 col-xs-12">
+          <input type:"text" class="form-control" placeholder="Start typing to search..." ng-model="searchText">
+        </div>
+        <div class="btn-group search-type">
+          <label class="btn btn-default">Open Source?</label>
+          <label class="btn btn-default">Integrated?</label>
+        </div>
       </div>
-      <div class="info">
+    </div>
+
+    <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
+      <div ng-repeat="product in products | filter:filterProducts" class="product col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <h3 class="name">
+          {{product.name}}
+        </h3>
         <div class='description'>
           {{product.description}}
         </div>
-        <div class='actions'>
-          Do stuff here.
+        <div class='rating'>
+          <i class="glyphicon glyphicon-star"></i>
+          <i class="glyphicon glyphicon-star"></i>
+          <i class="glyphicon glyphicon-star"></i>
+          (7)
         </div>
+        <a ng-href="#/products/{{product.id}}" class="details-link">
+          View Details
+        </a>
       </div>
     </div>
   </div>
