h3 to h4, added list item

--- a/public/the_bridge_templates/static/release-notes.html
+++ b/public/the_bridge_templates/static/release-notes.html
@@ -24,6 +24,9 @@
 	<li>
 		The repeat blog bug has been fixed.
 	</li>
+	<li>
+		There is a semi-functional (it is searchable for text, and nothing else) mockup of the marketplace on the site. 
+	</li>
 </ol>
 
 <p>Roadmap update, in order of priority:</p>
@@ -36,7 +39,7 @@
 	</li>
 </ol>
 
-<h3>***Today we found and replicated a strange bug with the lookup matching picklist field. It is no longer appearing and we are on high-alert. Please drop me a line if you notice that the picklist which populates your matching options for a lookup field goes blank while creating or editing a mapping.***</h3>
+<h4>***Today we found and replicated a strange bug with the lookup matching picklist field. It is no longer appearing and we are on high-alert. Please drop me a line if you notice that the picklist which populates your matching options for a lookup field goes blank while creating or editing a mapping.***</h4>
 
 <p>TD</p>
 
