added release notes header

--- a/public/the_bridge_templates/static/release-notes.html
+++ b/public/the_bridge_templates/static/release-notes.html
@@ -2,6 +2,11 @@
 <html>
 <body>
 
+<h1>Release Notes</h1>
+
+<h2>November 14th, 2014: Version 0.41, product listing management</h2>
+<p>Hey fam, this is a cool one. Now using Force.com to manage product listings. More soon.</p>
+
 <h2>November 13th, 2014: Version 0.4, ODK/SF upgrades, product listing mockup</h2>
 <p>Hey fam, quick features update on the latest release to production:</p>
 
