--- a/public/the_bridge_templates/static/release-notes.html
+++ b/public/the_bridge_templates/static/release-notes.html
@@ -2,12 +2,20 @@
 <html>
 <body>
 
-<h1>Release Notes</h1>
+<h1>
+	openIdeas
+</h1>
 
-<h2>November 14th, 2014: Version 0.41, product listing management</h2>
+<h2>Release Notes</h2>
+
+<h3>Version 0.41, product listing management
+	<small><span class="glyphicon glyphicon-time">November 14th, 2014 at 15:00 GMT</small>
+</h3>
 <p>Hey fam, this is a cool one. Now using Force.com to manage product listings. More soon.</p>
 
-<h2>November 13th, 2014: Version 0.4, ODK/SF upgrades, product listing mockup</h2>
+<h3>Version 0.4, ODK/SF upgrades, product listing mockup
+	<small><span class="glyphicon glyphicon-time">November 13th, 2014 at 17:09 GMT</small>
+</h3>
 <p>Hey fam, quick features update on the latest release to production:</p>
 
 <ol>
@@ -48,7 +56,9 @@
 
 <p>TD</p>
 
-<h2>October 29th, 2014: Version 0.3, Unique IDs for each destination record</h2>
+<h3>Version 0.3, Unique IDs for each destination record
+	<small><span class="glyphicon glyphicon-time">October 29th, 2014</small>
+</h3>
 
 <p>Hey family,</br></br>
 
