new welcome page

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/one-page-wonder.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
 <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+
 
     <!-- Full Width Image Header -->
     <header class="header-image">
         <div class="headline">
             <div class="container">
-                <h1>OpenFn</h1>
-                <h2>Get the <em>right</em> technologies to grow your impact</h2>
+                <h1>Open[Fn]</h1>
+                <h2>Technology isn't the answer;</br> it shouldn't be the problem</h2>
             </div>
         </div>
     </header>
@@ -19,33 +69,33 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">openMarketplace
-                <span class="text-muted">Find the tools you need</span>
+            <img class="featurette-image img-circle img-responsive pull-right" src="file:///C:/Users/Taylor/Desktop/startbootstrap-one-page-wonder-1.0.0/dark.png">
+            <h2 class="featurette-heading">open<strong>Marketplace</strong>
+                <span class="text-muted">helps you find the tools you need</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">It's an app store for impact-first organizations. Search, filter, compare features and price, see real usage patterns and reviews. Finding the <em>right</em> Android data capture tool (or SMS platform, MIS, visualization aid, etc.) to fit your organization's needs just got a lot easier.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">openIntegrations
-                <span class="text-muted">Drag-and-drop integrations with your other systems</span>
+            <img class="featurette-image img-circle img-responsive pull-left" src="file:///C:/Users/Taylor/Desktop/startbootstrap-one-page-wonder-1.0.0/grey.png">
+            <h2 class="featurette-heading">open<strong>Integrations</strong>
+                <span class="text-muted">makes apps more powerful</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Need surveys captured with ODK to show up in your Salesforce system? Want MPESA payments to sync with your clinic management platform? Don't spend money on custom code. Make it happen with a simple drag-and-drop interface. With a totally open-source and modular design, the number of endpoints is growing.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">openIdeas
-                <span class="text-muted">Conversations about behavior change, not technology</span>
+            <img class="featurette-image img-circle img-responsive pull-right" src="file:///C:/Users/Taylor/Desktop/startbootstrap-one-page-wonder-1.0.0/teal.png">
+            <h2 class="featurette-heading">open<strong>Ideas</strong>
+                <span class="text-muted">promotes conversations about technology's role in behavior change</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">75% of IT implementations fail. Want to learn from developers who abhore custom-coded solutions? Or CIOs who understand that culture is what makes or breaks an implementation? Want to learn how and why real organizations are both succeeding and failing to implement technologies geared at growing their social impact? Join the conversation.</p>
         </div>
 
         <hr class="featurette-divider">
@@ -54,7 +104,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Floppyright &copy; OpenFn 2014</p>
+                    <p>Open[Fn] is a not-for-profit organization whose mission is to help technology fulfill the promise it made to international development. You can support Open[Fn] by donating here. We are comitted to the open source software movement, and all of our code can be forked on Github under the GNU license.</p>
                 </div>
             </div>
         </footer>
