reworked welcome page

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -1,57 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/one-page-wonder.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-
-
+<div class="welcome">
     <!-- Full Width Image Header -->
     <header class="header-image">
         <div class="headline">
@@ -69,7 +16,7 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="file:///C:/Users/Taylor/Desktop/startbootstrap-one-page-wonder-1.0.0/dark.png">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/dark.png">
             <h2 class="featurette-heading">open<strong>Marketplace</strong>
                 <span class="text-muted">helps you find the tools you need</span>
             </h2>
@@ -80,7 +27,7 @@
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="file:///C:/Users/Taylor/Desktop/startbootstrap-one-page-wonder-1.0.0/grey.png">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/grey.png">
             <h2 class="featurette-heading">open<strong>Integrations</strong>
                 <span class="text-muted">makes apps more powerful</span>
             </h2>
@@ -91,7 +38,7 @@
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="file:///C:/Users/Taylor/Desktop/startbootstrap-one-page-wonder-1.0.0/teal.png">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/teal.png">
             <h2 class="featurette-heading">open<strong>Ideas</strong>
                 <span class="text-muted">promotes conversations about technology's role in behavior change</span>
             </h2>
@@ -110,4 +57,4 @@
         </footer>
 
     </div>
-</body>
+</div>
