new post on welcome page and logout glitch

--- a/public/the_bridge_templates/static/release-notes.html
+++ b/public/the_bridge_templates/static/release-notes.html
@@ -1,16 +1,27 @@
 <h1>
-	openIdeas
+	open<strong>Ideas</strong>
 </h1>
-
+</br>
+</br>
 <h2>Release Notes</h2>
 
+<h3>Version 0.42, welcome page, logout glitch fix
+	<small><span class="glyphicon glyphicon-time"></span>November 17th, 2014 at 17:50</small>
+</h3>
+<p>Hello. We're trying out a new welcome page and hope to open the site up publicly in a few weeks.
+	Trying to condense everything into a few short sentences is a great exercise.
+	I'm excited but daunted by the technical challenge on the modular integrations side of the platform.
+	Jon's brilliant work at the outset was constrained a bit by the need for a single working integration (ODK to Salesforce, one way)
+	and Nic and Stu are now charged with genericizing the importer in such a way that new products can be introduced as endpoints more easily in the future.
+</p>
+
 <h3>Version 0.41, product listing management
-	<small><span class="glyphicon glyphicon-time">November 14th, 2014 at 15:00 GMT</small>
+	<small><span class="glyphicon glyphicon-time"></span>November 14th, 2014 at 15:00 GMT</small>
 </h3>
 <p>Hey fam, this is a cool one. Now using Force.com to manage product listings. More soon.</p>
 
 <h3>Version 0.4, ODK/SF upgrades, product listing mockup
-	<small><span class="glyphicon glyphicon-time">November 13th, 2014 at 17:09 GMT</small>
+	<small><span class="glyphicon glyphicon-time"></span>November 13th, 2014 at 17:09 GMT</small>
 </h3>
 <p>Hey fam, quick features update on the latest release to production:</p>
 
@@ -53,7 +64,7 @@
 <p>TD</p>
 
 <h3>Version 0.3, Unique IDs for each destination record
-	<small><span class="glyphicon glyphicon-time">October 29th, 2014</small>
+	<small><span class="glyphicon glyphicon-time"></span>October 29th, 2014</small>
 </h3>
 
 <p>Hey family,</br></br>
