--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -4,7 +4,7 @@
         <div class="headline">
             <div class="container">
                 <h1>Open[Fn]</h1>
-                <h2>Technology isn't the answer;</br> it shouldn't be the problem</h2>
+                <h2>Technology is not the answer</br>but it shouldn't be the problem</h2>
             </div>
         </div>
     </header>
@@ -42,7 +42,7 @@
             <h2 class="featurette-heading">open<strong>Ideas</strong>
                 <span class="text-muted">promotes conversations about technology's role in behavior change</span>
             </h2>
-            <p class="lead">75% of IT implementations fail. Want to learn from developers who abhore custom-coded solutions? Or CIOs who understand that culture is what makes or breaks an implementation? Want to learn how and why real organizations are both succeeding and failing to implement technologies geared at growing their social impact? Join the conversation.</p>
+            <p class="lead">75% of IT implementations fail. Want to learn from developers who abhore custom-coded solutions? Or CIOs who understand that culture is what makes or breaks a technology project? Want to learn how and why real organizations are both succeeding and failing to implement technologies geared at growing their social impact? Join the conversation.</p>
         </div>
 
         <hr class="featurette-divider">
@@ -51,7 +51,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Open[Fn] is a not-for-profit organization whose mission is to help technology fulfill the promise it made to international development. You can support Open[Fn] by donating here. We are comitted to the open source software movement, and all of our code can be forked on Github under the GNU license.</p>
+                    <p>Open[Fn] is a not-for-profit organization whose mission is to help technology fulfill the promise it made to international development. We are comitted to the open source software movement, and all of our code can be forked on Github under the GNU license.</p>
                 </div>
             </div>
         </footer>
