Product detail page added, but as yet unstyled.

--- a/public/the_bridge_templates/product_search/index.html
+++ b/public/the_bridge_templates/product_search/index.html
@@ -32,7 +32,7 @@
             <i class="glyphicon glyphicon-star"></i>
             (7)
           </div>
-          <a ng-href="#/products/{{product.id}}" class="details-link">
+          <a ng-href="#/product/{{product.id}}" class="details-link">
             View Details
           </a>
         </div>
