Can toggle between integrated and all products, and can update Integrated flag from Salesforce

--- a/public/the_bridge_templates/product_search/index.html
+++ b/public/the_bridge_templates/product_search/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="btn-group search-type">
           <label class="btn btn-default">Open Source?</label>
-          <label class="btn btn-default">Integrated?</label>
+          <label class="btn btn-default" ng-model="searchFilters.integrated" btn-checkbox>Integrated?</label>
         </div>
       </div>
     </div>
