Added detailed description to products

--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -30,7 +30,7 @@
 
       <tabset>
         <tab heading="Description" class="description">
-          <div class="tab-content-text">{{product.description}}</div>
+          <div class="tab-content-text">{{product.detailed_description}}</div>
           <div class="tag-list">
             <span ng-repeat="tag in product.tag_list" class="tag label label-info">{{tag}}</span>
           </div>
