updated release notes

--- a/public/the_bridge_templates/static/release-notes.html
+++ b/public/the_bridge_templates/static/release-notes.html
@@ -5,14 +5,15 @@
 </br>
 <h2>Release Notes</h2>
 
-<h3>Version 0.42, welcome page, logout glitch fix
-	<small><span class="glyphicon glyphicon-time"></span>November 17th, 2014 at 17:50</small>
+<h3>Version 0.42, welcome page, logout glitch fix, repeat block ghost fix, UUID fix
+	<small><span class="glyphicon glyphicon-time"></span>November 24th, 2014 at 12:00 GMT</small>
 </h3>
-<p>Hello. We're trying out a new welcome page and hope to open the site up publicly in a few weeks.
-	Trying to condense everything into a few short sentences is a great exercise.
-	I'm excited but daunted by the technical challenge on the modular integrations side of the platform.
-	Jon's brilliant work at the outset was constrained a bit by the need for a single working integration (ODK to Salesforce, one way)
-	and Nic and Stu are now charged with genericizing the importer in such a way that new products can be introduced as endpoints more easily in the future.
+<p>Hi fam,
+	</br>	We're trying out a new welcome page and hope to open the site up publicly in a few weeks. Trying to condense everything into a few short sentences is a great exercise. I'm excited but daunted by the technical challenge on the modular integrations side of the platform. Jon's work at the outset was constrained a bit by the need for a single working integration (ODK to Salesforce, one way) and Nic and Stu are now charged with genericizing the importer in such a way that new products can be introduced as endpoints more easily in the future.	</br>	If you're using the UUID functionality, please make sure that you're mapping that source to a unique field on each Salesforce object.
+	</br>	The repeat block ghost record issue (inserting a record where there was nothing in the repeat block) has now been resolved.
+	</br>	It's now possible to log out.
+	</br>	It's now possible to access the site without a login.
+	</br>	- TD
 </p>
 
 <h3>Version 0.41, product listing management
