--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -51,7 +51,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Open[Fn] is a not-for-profit organization whose mission is to help technology fulfill the promise it made to international development. We are comitted to the open source software movement, and all of our code can be forked on Github under the GNU license.</p>
+                    <p>Open[Fn] is a not-for-profit organization. All of our code can be forked on Github under the GPLv3.0 license.</p>
                 </div>
             </div>
         </footer>
